Updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Welcome to my very first website! I'm super excited to be learning HTML.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Los Angeles!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to read comic books, boulder and play guitar.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is being a project manager at an augmented reality company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Los Angeles.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm looking to learn more useful skills for my long term career. I also want to learn HOW to learn different coding languages.</p>
     </section>
 
     <footer id="footer">
